# qrid-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
qrid/: __init__.py  codec.py
tests/: test_codec.py
