[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrid"
version = "1.0.2"
description = "Decode and encode MergeID electronic invoice QR codes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Valentin Secades Mendez", email = "vsecades@qxdev.com" },
]
keywords = ["qrcode", "qr", "invoice", "mergeid", "codec", "decoder"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.optional-dependencies]
encode = ["segno>=1.6"]
dev    = ["pytest>=7.0", "segno>=1.6"]

[project.urls]
Homepage   = "https://github.com/Quality-XP-Development-SESSA/qrid-python"
Repository = "https://github.com/Quality-XP-Development-SESSA/qrid-python"
